@@ -25,8 +25,9 @@ distribution.
 #include <ctype.h>
 #include "tinyxml.h"
 
-
-
+#ifdef TIXML_USE_STL
+#include <sstream>
+#endif
 
 bool TiXmlBase::condenseWhiteSpace = true;
 
@@ -1120,6 +1121,18 @@ TIXML_OSTREAM & operator<< (TIXML_OSTREAM & out, const TiXmlNode & base)
 	base.StreamOut (& out);
 	return out;
 }
+
+
+#ifdef TIXML_USE_STL	
+std::string & operator<< (std::string& out, const TiXmlNode& base )
+{
+   std::ostringstream os_stream( std::ostringstream::out );
+   base.StreamOut( &os_stream );
+   
+   out.append( os_stream.str() );
+   return out;
+}
+#endif
 
 
 TiXmlHandle TiXmlHandle::FirstChild() const
